# MeddySDK_Meddyproject

./: .gitmodules  CMakeLists.txt  CMakePresets.json  MeddySDK_MeddyprojectConfig.cmake  README.md
CMake/CMakePresets/: GenericPresets.json
CMake/Modules/: ConditionallyWarnAboutDoubleQuotesInPathVariable.cmake  MyGNUInstallDirs.cmake
CMake/Modules/CPack/: NSIS.InstallOptions.ini.in
Include/: CMakeLists.txt
Include/Include/: CharBufferString.h  FilesystemUtils.h  MeddySDK_Meddyproject_Export.h  meddysdk_meddyproject_include_export.h
Include/Include/MeddySDK_Meddyproject/: CharBufferString.h  FilesystemUtils.h  Meddyproject.h  StringUtils.h
Interface/: CMakeLists.txt
Interface/Include/: MeddySDK_Meddyproject_Export.h  Meddyproject.h  StringUtils.h  meddysdk_meddyproject_interface_export.h
MeddySDK.Meddyproject/: CMakeLists.txt
MeddySDK.Meddyproject/CMake/: MeddySDK.Meddyproject.cmake
MeddySDK.Meddyproject/Source/Private/: MeddySDK.Meddyproject.cpp
MeddySDK_Meddyproject/: CMakeLists.txt
MeddySDK_Meddyproject/Source/Private/: MeddySDK_Meddyproject.cpp
Meddyproject/: CMakeLists.txt  MeddyprojectConfig.cmake
Meddyproject/Source/Private/: Meddyproject.cpp
Module/: CMakeLists.txt
Object/: CMakeLists.txt
Shared/: CMakeLists.txt
Source/: CMakeLists.txt
Source/Private/: CharBufferString.cpp  FilesystemUtils.cpp  MeddySDK_Meddyproject.cpp  Meddyproject.cpp  Path.cpp  ProjectPath.cpp
Source/Public/: FilesystemUtils.h  MeddySDK_Meddyproject.h  Meddyproject.h  Path.h  ProjectPath.h  StringUtils.h
Source/Source/: CharBufferString.cpp  FilesystemUtils.cpp  MeddySDK_Meddyproject_Export.cpp  Meddyproject.cpp  StringUtils.cpp
Static/: CMakeLists.txt  MeddySDK_Meddyproject_StaticConfig.cmake
Static/Source/Public/: CharBufferString.h
Tests/: CMakeLists.txt
Tests/CMake/Scripts/: TryCreateNewProject_SuccessCase.cmake
Tests/Source/: DotMeddyprojectToManifestFilePath.cpp  DotMeddyprojectToProjectRootPath.cpp  ProjectRootToDotMeddyprojectPath.cpp  TryCreateNewProject.cpp
Tests/Source/Private/: DotMeddyprojectToManifestFilePath.cpp  DotMeddyprojectToProjectRootPath.cpp  Path_MakeProjectPath.cpp  ProjectRootToDotMeddyprojectPath.cpp
